--- a/dir1/app1.html
+++ b/dir1/app1.html
@@ -5,6 +5,6 @@
         </title>
     </head>
     <body>
-        <h1>This is smaple GIT Application main</h1>
+        <h1>This is smaple GIT Application 1</h1>
     </body>
 </html>
