--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
         </title>
     </head>
     <body>
-        <h1>This is smaple GIT Application main</h1>
-        <h2>Login</h2>
+        <h1>This is Login Page</h1>
     </body>
 </html>
